# actix_backend_template

./: Cargo.toml  README.md  env_SAMPLE
entity/: Cargo.toml
entity/src/comment/: comment.rs  mod.rs  prelude.rs
entity/src/post/: post.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240212_023838_create_post_table.rs  m20240212_023843_create_comment_table.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/comment/: controller.rs  dto.rs  mod.rs  service.rs
src/post/: controller.rs  dto.rs  mod.rs  service.rs
