[package]
name = "actix_backend_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration", "entity"]


[dependencies]
entity = { path = "entity" }
migration = { path = "migration"}
actix-web = "4"
sea-orm = { version = "^0.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "debug-print", "with-chrono" ] }
dotenv = "0.15.0"
config = "0.14.0"
serde = { version = "1.0.196", features = ["derive"] }
derive_more = "0.99.17"
log = "0.4.20"
env_logger = "0.11.1"
chrono = "0.4.34"
actix-cors = "0.7.0"